--- a/PriemSPO_2013.csproj
+++ b/PriemSPO_2013.csproj
@@ -71,10 +71,6 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>bin\Debug\BDClassLib.dll</HintPath>
     </Reference>
-    <Reference Include="EducServLib, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\_SHARED LIBS\BaseFormsLib\BaseFormsLib\bin\Debug\EducServLib.dll</HintPath>
-    </Reference>
     <Reference Include="itextsharp">
       <HintPath>..\..\..\..\LIBRARIES\itextsharp.dll</HintPath>
     </Reference>
@@ -1013,6 +1009,9 @@
       <LastGenOutput>PriemModel.Designer.cs</LastGenOutput>
     </EntityDeploy>
     <Compile Include="MainClass.Roles.cs" />
+    <None Include="PriemModel.edmx.diagram">
+      <DependentUpon>PriemModel.edmx</DependentUpon>
+    </None>
     <None Include="Properties\DataSources\PriemEntities.datasource" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -1051,6 +1050,12 @@
       <ProductName>Windows Installer 3.1</ProductName>
       <Install>true</Install>
     </BootstrapperPackage>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\_SHARED LIBS\EducServLib\EducServLib\EducServLib.csproj">
+      <Project>{96257583-5ff8-4f63-aed3-96c36df6477d}</Project>
+      <Name>EducServLib</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
