--- a/PriemSPO_2013.csproj
+++ b/PriemSPO_2013.csproj
@@ -10,8 +10,9 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Priem</RootNamespace>
     <AssemblyName>Priem_spo</AssemblyName>
-    <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
-    <TargetFrameworkProfile>Client</TargetFrameworkProfile>
+    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
+    <TargetFrameworkProfile>
+    </TargetFrameworkProfile>
     <FileAlignment>512</FileAlignment>
     <SccProjectName>
     </SccProjectName>
@@ -46,6 +47,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|x86' ">
     <PlatformTarget>x86</PlatformTarget>
@@ -55,6 +57,7 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup>
     <ApplicationIcon>school-college.ico</ApplicationIcon>
@@ -67,6 +70,12 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>bin\Debug\BDClassLib.dll</HintPath>
     </Reference>
+    <Reference Include="EntityFramework">
+      <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.dll</HintPath>
+    </Reference>
+    <Reference Include="EntityFramework.SqlServer">
+      <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.SqlServer.dll</HintPath>
+    </Reference>
     <Reference Include="itextsharp">
       <HintPath>..\..\PriemLib\PriemLib\itextsharp.dll</HintPath>
     </Reference>
@@ -78,9 +87,9 @@
       <HintPath>bin\Debug\RtfWriter.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.configuration" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Data.Entity" />
     <Reference Include="System.DirectoryServices.AccountManagement" />
     <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Security" />
@@ -129,41 +138,11 @@
     <Compile Include="Crypto\EnterMarks.designer.cs">
       <DependentUpon>EnterMarks.cs</DependentUpon>
     </Compile>
-    <Compile Include="Crypto\ExamsVedCard.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Crypto\ExamsVedCard.designer.cs">
-      <DependentUpon>ExamsVedCard.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Crypto\ExamsVedList.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Crypto\ExamsVedList.designer.cs">
-      <DependentUpon>ExamsVedList.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Crypto\ExamsVedRoomCard.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Crypto\ExamsVedRoomCard.designer.cs">
-      <DependentUpon>ExamsVedRoomCard.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Crypto\ExamsVedRoomList.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Crypto\ExamsVedRoomList.designer.cs">
-      <DependentUpon>ExamsVedRoomList.cs</DependentUpon>
-    </Compile>
     <Compile Include="Crypto\LoadMarks.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Crypto\LoadMarks.Designer.cs">
       <DependentUpon>LoadMarks.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Crypto\SelectExamCrypto.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Crypto\SelectExamCrypto.designer.cs">
-      <DependentUpon>SelectExamCrypto.cs</DependentUpon>
     </Compile>
     <Compile Include="Crypto\SelectVed.cs">
       <SubType>Form</SubType>
@@ -183,9 +162,7 @@
     <Compile Include="Crypto\SetNewMark.Designer.cs">
       <DependentUpon>SetNewMark.cs</DependentUpon>
     </Compile>
-    <Compile Include="Exams\ExamResults.cs">
-      <SubType>Form</SubType>
-    </Compile>
+    <Compile Include="Exams\ExamResults.cs" />
     <Compile Include="Exams\ExamResults.designer.cs">
       <DependentUpon>ExamResults.cs</DependentUpon>
     </Compile>
@@ -200,21 +177,6 @@
     </Compile>
     <Compile Include="Exams\Olymp2Mark.designer.cs">
       <DependentUpon>Olymp2Mark.cs</DependentUpon>
-    </Compile>
-    <Compile Include="ExportClass.cs" />
-    <Compile Include="FBS\EgeClass.cs" />
-    <Compile Include="FBS\FBSClass.cs" />
-    <Compile Include="FBS\LoadEgeMarks.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="FBS\LoadEgeMarks.designer.cs">
-      <DependentUpon>LoadEgeMarks.cs</DependentUpon>
-    </Compile>
-    <Compile Include="FBS\LoadFBS.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="FBS\LoadFBS.designer.cs">
-      <DependentUpon>LoadFBS.cs</DependentUpon>
     </Compile>
     <Compile Include="Filters\Columns.cs">
       <SubType>Form</SubType>
@@ -250,29 +212,11 @@
     <Compile Include="Lists\AllAbitList.designer.cs">
       <DependentUpon>AllAbitList.cs</DependentUpon>
     </Compile>
-    <Compile Include="Lists\ApplicationInetList.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Lists\ApplicationInetList.Designer.cs">
-      <DependentUpon>ApplicationInetList.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Lists\ListAbit.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Lists\ListAbit.designer.cs">
-      <DependentUpon>ListAbit.cs</DependentUpon>
-    </Compile>
     <Compile Include="Lists\ListHostel.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Lists\ListHostel.designer.cs">
       <DependentUpon>ListHostel.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Lists\ListPersonFilter.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Lists\ListPersonFilter.designer.cs">
-      <DependentUpon>ListPersonFilter.cs</DependentUpon>
     </Compile>
     <Compile Include="Lists\OlympAbitList.cs">
       <SubType>Form</SubType>
@@ -310,12 +254,6 @@
     </Compile>
     <Compile Include="MainForm.Designer.cs">
       <DependentUpon>MainForm.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrator.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Migrator.designer.cs">
-      <DependentUpon>Migrator.cs</DependentUpon>
     </Compile>
     <Compile Include="Print.cs">
       <SubType>Code</SubType>
@@ -362,65 +300,17 @@
     <Compile Include="Statistics\Form2.Designer.cs">
       <DependentUpon>Form2.cs</DependentUpon>
     </Compile>
-    <Compile Include="Statistics\FormA.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Statistics\FormA.Designer.cs">
-      <DependentUpon>FormA.cs</DependentUpon>
-    </Compile>
     <Compile Include="Statistics\OlympAbitBallsAndRatings.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Statistics\OlympAbitBallsAndRatings.Designer.cs">
       <DependentUpon>OlympAbitBallsAndRatings.cs</DependentUpon>
     </Compile>
-    <Compile Include="Statistics\OlympLevelAbitRating.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Statistics\OlympLevelAbitRating.Designer.cs">
-      <DependentUpon>OlympLevelAbitRating.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Statistics\OlympRegionBySubject.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Statistics\OlympRegionBySubject.Designer.cs">
-      <DependentUpon>OlympRegionBySubject.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Statistics\OlympSubjectByRegion.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Statistics\OlympSubjectByRegion.Designer.cs">
-      <DependentUpon>OlympSubjectByRegion.cs</DependentUpon>
-    </Compile>
     <Compile Include="Statistics\PersonStatRating.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Statistics\PersonStatRating.Designer.cs">
       <DependentUpon>PersonStatRating.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Statistics\RegionAbitEGEMarksStatistics.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Statistics\RegionAbitEGEMarksStatistics.Designer.cs">
-      <DependentUpon>RegionAbitEGEMarksStatistics.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Statistics\RegionAbitStatistics.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Statistics\RegionAbitStatistics.Designer.cs">
-      <DependentUpon>RegionAbitStatistics.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Statistics\RegionAbitStatstics_Reversed.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Statistics\RegionAbitStatstics_Reversed.Designer.cs">
-      <DependentUpon>RegionAbitStatstics_Reversed.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Statistics\RegionFacultyAbitCountStatistics.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Statistics\RegionFacultyAbitCountStatistics.Designer.cs">
-      <DependentUpon>RegionFacultyAbitCountStatistics.cs</DependentUpon>
     </Compile>
     <Compile Include="Statistics\Watch.cs">
       <SubType>Form</SubType>
@@ -443,23 +333,8 @@
     <EmbeddedResource Include="Crypto\EnterMarks.resx">
       <DependentUpon>EnterMarks.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Crypto\ExamsVedCard.resx">
-      <DependentUpon>ExamsVedCard.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Crypto\ExamsVedList.resx">
-      <DependentUpon>ExamsVedList.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Crypto\ExamsVedRoomCard.resx">
-      <DependentUpon>ExamsVedRoomCard.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Crypto\ExamsVedRoomList.resx">
-      <DependentUpon>ExamsVedRoomList.cs</DependentUpon>
-    </EmbeddedResource>
     <EmbeddedResource Include="Crypto\LoadMarks.resx">
       <DependentUpon>LoadMarks.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Crypto\SelectExamCrypto.resx">
-      <DependentUpon>SelectExamCrypto.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Crypto\SelectVed.resx">
       <DependentUpon>SelectVed.cs</DependentUpon>
@@ -479,12 +354,6 @@
     <EmbeddedResource Include="Exams\Olymp2Mark.resx">
       <DependentUpon>Olymp2Mark.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="FBS\LoadEgeMarks.resx">
-      <DependentUpon>LoadEgeMarks.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="FBS\LoadFBS.resx">
-      <DependentUpon>LoadFBS.cs</DependentUpon>
-    </EmbeddedResource>
     <EmbeddedResource Include="Filters\Columns.resx">
       <DependentUpon>Columns.cs</DependentUpon>
     </EmbeddedResource>
@@ -500,17 +369,8 @@
     <EmbeddedResource Include="Lists\AllAbitList.resx">
       <DependentUpon>AllAbitList.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Lists\ApplicationInetList.resx">
-      <DependentUpon>ApplicationInetList.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Lists\ListAbit.resx">
-      <DependentUpon>ListAbit.cs</DependentUpon>
-    </EmbeddedResource>
     <EmbeddedResource Include="Lists\ListHostel.resx">
       <DependentUpon>ListHostel.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Lists\ListPersonFilter.resx">
-      <DependentUpon>ListPersonFilter.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Lists\OlympAbitList.resx">
       <DependentUpon>OlympAbitList.cs</DependentUpon>
@@ -529,9 +389,6 @@
     </EmbeddedResource>
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrator.resx">
-      <DependentUpon>Migrator.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -561,35 +418,11 @@
     <EmbeddedResource Include="Statistics\Form2.resx">
       <DependentUpon>Form2.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Statistics\FormA.resx">
-      <DependentUpon>FormA.cs</DependentUpon>
-    </EmbeddedResource>
     <EmbeddedResource Include="Statistics\OlympAbitBallsAndRatings.resx">
       <DependentUpon>OlympAbitBallsAndRatings.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Statistics\OlympLevelAbitRating.resx">
-      <DependentUpon>OlympLevelAbitRating.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Statistics\OlympRegionBySubject.resx">
-      <DependentUpon>OlympRegionBySubject.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Statistics\OlympSubjectByRegion.resx">
-      <DependentUpon>OlympSubjectByRegion.cs</DependentUpon>
-    </EmbeddedResource>
     <EmbeddedResource Include="Statistics\PersonStatRating.resx">
       <DependentUpon>PersonStatRating.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Statistics\RegionAbitEGEMarksStatistics.resx">
-      <DependentUpon>RegionAbitEGEMarksStatistics.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Statistics\RegionAbitStatistics.resx">
-      <DependentUpon>RegionAbitStatistics.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Statistics\RegionAbitStatstics_Reversed.resx">
-      <DependentUpon>RegionAbitStatstics_Reversed.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Statistics\RegionFacultyAbitCountStatistics.resx">
-      <DependentUpon>RegionFacultyAbitCountStatistics.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Statistics\Watch.resx">
       <DependentUpon>Watch.cs</DependentUpon>
@@ -597,6 +430,7 @@
     <None Include="App.config">
       <SubType>Designer</SubType>
     </None>
+    <None Include="packages.config" />
     <None Include="Properties\DataSources\PriemEntities.datasource" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -637,6 +471,10 @@
     </BootstrapperPackage>
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\..\EDUCATION\EducServLib\EducServLib\EducServLib.csproj">
+      <Project>{96257583-5ff8-4f63-aed3-96c36df6477d}</Project>
+      <Name>EducServLib</Name>
+    </ProjectReference>
     <ProjectReference Include="..\..\PriemLib\PriemLib\PriemLib.csproj">
       <Project>{957a6e48-2cf1-4360-bbe5-d27246bc2093}</Project>
       <Name>PriemLib</Name>
@@ -644,10 +482,6 @@
     <ProjectReference Include="..\..\_SHARED LIBS\BaseFormsLib\BaseFormsLib\BaseFormsLib.csproj">
       <Project>{264EF71D-FE21-4BE1-B7EB-CCF3B5FD219F}</Project>
       <Name>BaseFormsLib</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\_SHARED LIBS\EducServLib\EducServLib\EducServLib.csproj">
-      <Project>{96257583-5ff8-4f63-aed3-96c36df6477d}</Project>
-      <Name>EducServLib</Name>
     </ProjectReference>
     <ProjectReference Include="..\..\_SHARED LIBS\WordOut\WordOut.csproj">
       <Project>{C54799A9-232C-45B2-BE94-B63F514CA52A}</Project>
